--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -2,37 +2,34 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>AirBnb Clone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB Clone</title>
     <style>
       body {
-		  margin: 0;
-		  padding: 0;
-	  }
+        margin: 0px;
+        padding: 0px;
+      }
       header {
-		  width: 100%;
-		  background-color: #FF0000;
-		  height: 70px;
-	  }
+        background-color: #ff0000;
+        height: 70px;
+        width: 100%;
+      }
       footer {
-		  position: fixed;
-		  bottom: 0;
-		  width: 100%;
-		  background-color: #00FF00;
-		  height: 60px;
-	  }
-      footer p {
-		  text-align: center;
-		  margin: 20px;
-	  }
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        position: absolute;
+        bottom: 0px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
     </style>
   </head>
   <body>
-    <header>
-    </header>
+    <header></header>
     <footer>
-      <p>
-        Best School
-      </p>
+      <p>Best School</p>
     </footer>
   </body>
 </html>
