--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB Clone</title>
-    <link rel="stylesheet" href="styles/102-common.css">
-    <link rel="stylesheet" href="styles/102-header.css">
-    <link rel="stylesheet" href="styles/102-footer.css">
-    <link rel="stylesheet" href="styles/102-filters.css">
-    <link rel="stylesheet" href="styles/102-places.css">
+    <link rel="stylesheet" href="styles/103-common.css">
+    <link rel="stylesheet" href="styles/103-header.css">
+    <link rel="stylesheet" href="styles/103-footer.css">
+    <link rel="stylesheet" href="styles/103-filters.css">
+    <link rel="stylesheet" href="styles/103-places.css">
     <link rel="icon" type="image/x-icon" href="images/icon.png">
   </head>
   <body>
@@ -45,7 +45,9 @@
             <li>Iron</li>
           </ul>
         </div>
-        <button>Search</button>
+        <button aria-label="Search">
+          <span>Search</span>
+        </button>
       </section>
       <section class="places">
         <h1>Places</h1>
