--- a/web_static/5-index.html
+++ b/web_static/5-index.html
@@ -1,38 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB Clone</title>
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/5-filters.css">
-    <link rel="icon" href="images/icon.png" type="image/png">
-    <title>AirBnb Clone</title>
+    <link rel="icon" type="image/x-icon" href="images/icon.png">
   </head>
   <body>
-    <header>
-      <div class="logo">
-      </div>
-    </header>
+    <header></header>
     <div class="container">
       <section class="filters">
         <div class="locations">
-          <h3>States</h3>
-          <h4>California, New York...</h4>
+          <h3 class="filter-title">States</h3>
+          <h4 class="filter-subtitle">California, Arizona</h4>
         </div>
         <div class="amenities">
-          <h3>Amenities</h3>
-          <h4>Laundry, Internet...</h4>
+          <h3 class="filter-title">Amenities</h3>
+          <h4 class="filter-subtitle">Internet, Kitchen</h4>
         </div>
-        <button>
-          Search
-        </button>
+        <button>Search</button>
       </section>
     </div>
     <footer>
-      <p>
-        Best School
-      </p>
+      <p>Best School</p>
     </footer>
   </body>
 </html>
