--- a/web_static/7-index.html
+++ b/web_static/7-index.html
@@ -2,54 +2,50 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB Clone</title>
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="stylesheet" href="styles/7-places.css">
-    <link rel="icon" href="images/icon.png" type="image/png">
-    <title>AirBnb Clone</title>
+    <link rel="icon" type="image/png" href="images/icon.png">
   </head>
   <body>
-    <header>
-      <div class="logo">
-      </div>
-    </header>
+    <header></header>
     <div class="container">
       <section class="filters">
         <div class="locations">
-          <h3>States</h3>
-          <h4>California, New York...</h4>
+          <h3 class="filter-title">States</h3>
+          <h4 class="filter-subtitle">California, Arizona</h4>
           <ul class="popover">
             <li>
-              <h2>California:</h2>
+              <h2>Arizona</h2>
               <ul>
-                <li>San Francisco</li>
-                <li>Mountain View</li>
+                <li>Page 1</li>
+                <li>Page 2</li>
               </ul>
             </li>
             <li>
-              <h2>New York:</h2>
+              <h2>California</h2>
               <ul>
-                <li>Manhattan</li>
-                <li>Brooklyn</li>
+                <li>San Francisco</li>
+                <li>Los Altos</li>
               </ul>
             </li>
           </ul>
         </div>
         <div class="amenities">
-          <h3>Amenities</h3>
-          <h4>Laundry, Internet...</h4>
+          <h3 class="filter-title">Amenities</h3>
+          <h4 class="filter-subtitle">Internet, Kitchen</h4>
           <ul class="popover">
-            <li>Laundry</li>
             <li>Internet</li>
-            <li>Television</li>
-            <li>Pool</li>
+            <li>TV</li>
+            <li>Kitchen</li>
+            <li>Iron</li>
           </ul>
         </div>
-        <button>
-          Search
-        </button>
+        <button>Search</button>
       </section>
       <section class="places">
         <h1>Places</h1>
@@ -65,9 +61,7 @@
       </section>
     </div>
     <footer>
-      <p>
-        Best School
-      </p>
+      <p>Best School</p>
     </footer>
   </body>
 </html>
