--- a/web_static/8-index.html
+++ b/web_static/8-index.html
@@ -1,136 +1,87 @@
 <!DOCTYPE html>
-<html lang="zxx">
+<html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AirBnB Clone</title>
     <link rel="stylesheet" href="styles/4-common.css">
     <link rel="stylesheet" href="styles/3-header.css">
     <link rel="stylesheet" href="styles/3-footer.css">
     <link rel="stylesheet" href="styles/6-filters.css">
     <link rel="stylesheet" href="styles/8-places.css">
-    <link rel="icon" href="images/icon.png" type="image/png">
-    <title>AirBnb Clone</title>
+    <link rel="icon" type="image/png" href="images/icon.png">
   </head>
   <body>
-    <header>
-      <div class="logo">
-      </div>
-    </header>
+    <header></header>
     <div class="container">
       <section class="filters">
-	<div class="locations">
-	  <h3>States</h3>
-	  <h4>California, New York...</h4>
-	  <ul class="popover">
-	    <li>
-	      <h2>California:</h2>
-	      <ul>
-		<li>San Francisco</li>
-		<li>Mountain View</li>
-	      </ul>
-	    </li>
-	    <li>
-	      <h2>New York:</h2>
-	      <ul>
-		<li>Manhattan</li>
-		<li>Brooklyn</li>
-	      </ul>
-	    </li>
-	  </ul>
-	</div>
-	<div class="amenities">
-	  <h3>Amenities</h3>
-	  <h4>Laundry, Internet...</h4>
-	  <ul class="popover">
-            <li>Laundry</li>
-	    <li>Internet</li>
-	    <li>Television</li>
-	    <li>Pool</li>
-	  </ul>
-	</div>
-	<button>
-	  Search
-	</button>
+        <div class="locations">
+          <h3 class="filter-title">States</h3>
+          <h4 class="filter-subtitle">California, Arizona</h4>
+          <ul class="popover">
+            <li>
+              <h2>Arizona</h2>
+              <ul>
+                <li>Page 1</li>
+                <li>Page 2</li>
+              </ul>
+            </li>
+            <li>
+              <h2>California</h2>
+              <ul>
+                <li>San Francisco</li>
+                <li>Los Altos</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="amenities">
+          <h3 class="filter-title">Amenities</h3>
+          <h4 class="filter-subtitle">Internet, Kitchen</h4>
+          <ul class="popover">
+            <li>Internet</li>
+            <li>TV</li>
+            <li>Kitchen</li>
+            <li>Iron</li>
+          </ul>
+        </div>
+        <button>Search</button>
       </section>
       <section class="places">
-	<h1>Places</h1>
-	<article>
-	  <h2>My home</h2>
-	  <div class="price_by_night">
-	    <p>$80</p>
-	  </div>
-	  <div class="information">
-	    <div class="max_guest">
-	      <div class="guest_image"></div>
-	      <p>2 Guests</p>
-	    </div>
-	    <div class="number_rooms">
-	      <div class="bed_image"></div>
-	      <p>1 Bedroom</p>
-	    </div>
-	    <div class="number_bathrooms">
-	      <div class="bath_image"></div>
-	      <p>1 Bathroom</p>
-	    </div>
-	  </div>
-	  <div class="user">
-	    <p><b>Owner: </b>Jon Snow</p>
-	  </div>
-	  <div class="description">
-	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	  </div>
-	</article>
-	<article>
-	  <h2>Tiny house</h2>
-	  <div class="price_by_night">
-	    <p>$65</p>
-	  </div>
-	  <div class="information">
-	    <div class="max_guest">
-	      <div class="guest_image"></div>
-	      <p>4 Guests</p>
-	    </div>
-	    <div class="number_rooms">
-	      <div class="bed_image"></div>
-	      <p>2 Bedroom</p>
-	    </div>
-	    <div class="number_bathrooms">
-	      <div class="bath_image"></div>
-	      <p>1 Bathroom</p>
-	    </div>
-	  </div>
-	  <div class="user">
-	    <p><b>Owner: </b>Daenerys Targaryen</p>
-	  </div>
-	  <div class="description">
-	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	  </div>
-	</article>
-	<article>
-	  <h2>A suite</h2>
-	  <div class="price_by_night">
-	    <p>$190</p>
-	  </div>
-	  <div class="information">
-	    <div class="max_guest">
-	      <div class="guest_image"></div>
-	      <p>6 Guests</p>
-	    </div>
-	    <div class="number_rooms">
-	      <div class="bed_image"></div>
-	      <p>3 Bedroom</p>
-	    </div>
-	    <div class="number_bathrooms">
-	      <div class="bath_image"></div>
-	      <p>2 Bathroom</p>
-	    </div>
-	  </div>
-	  <div class="user">
-	    <p><b>Owner: </b>Azor Ahai</p>
-	  </div>
-	  <div class="description">
-	    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	  </div>
-	</article>
+        <h1>Places</h1>
+        <article>
+          <h2>My home</h2>
+          <div class="price_by_night">$80</div>
+          <div class="information">
+            <div class="max_guest">2 Guests</div>
+            <div class="number_rooms">1 Bedroom</div>
+            <div class="number_bathrooms">1 Bathroom</div>
+          </div>
+          <div class="user"><strong>Owner: </strong>Karl Kamau</div>
+          <div class="description">This is a lovely 1 bedroom and 1 bathroom apartment that can accomodate 2 people. It locates at the center of Shangai and next to subway line 1, 1 stop to People Square, 2 stops to Bund, 3 stops to Jingan Temple.</div>
+        </article>
+        <article>
+          <h2>Tiny house</h2>
+          <div class="price_by_night">$65</div>
+          <div class="information">
+            <div class="max_guest">2 Guests</div>
+            <div class="number_rooms">1 Bedroom</div>
+            <div class="number_bathrooms">1 Bathroom</div>
+          </div>
+          <div class="user"><strong>Owner: </strong>Luciana Omega</div>
+          <div class="description">Our place is a private, affordable stand-alone guest house centrally located just minutes to French Quarters, Downtown, the Fair Grounds(Jazz Fest) and City Park. The guest house is a quaint, 400 square ft. with a full bath, mini kitchen and living room. The extra high ceilings make the home feel more spacious. The sofa converts to a bed also. We have a handmade counter area that adds character to the room and a great porch/deck to relax on and have a glass of Merlot.</div>
+        </article>
+        <article>
+          <h2>A suite</h2>
+          <div class="price_by_night">$190</div>
+          <div class="information">
+            <div class="max_guest">2 Guests</div>
+            <div class="number_rooms">1 Bedroom</div>
+            <div class="number_bathrooms">1 Bathroom</div>
+          </div>
+          <div class="user"><strong>Owner: </strong>Humphrey Ragoli</div>
+          <div class="description">This suite is equipped with 2 kind-size beds and 1 twin bed, and is perfect for a family vacation. Located near ground transportation in the east of Paris, it's easy to go visit the city in less than 30 minutes. The cafe across the street serves delicious vegan brunch every weekend, and is children-friendly.</div>
+        </article>
       </section>
     </div>
     <footer>
