--- a/web_static/103-index.html
+++ b/web_static/103-index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles/103-footer.css">
     <link rel="stylesheet" href="styles/103-filters.css">
     <link rel="stylesheet" href="styles/103-places.css">
-    <link rel="icon" type="image/x-icon" href="images/icon.png">
+    <link rel="icon" type="image/png" href="images/icon.png">
   </head>
   <body>
     <header></header>
